assets/css/main.css
/* ... */
/* Mobile (Portrait) */

	@media screen and (max-width: 480px) {

		/* Basic */

			body, input, textarea, select {
				font-size: 12pt;
				letter-spacing: 0;
			}

			.feature {
				text-align: left;
			}

		/* Sections/Article */

			section, article {
				margin-bottom: 2em;
			}

			.row > section,
			.row > article {
				margin-bottom: 2em;
			}

			header.major {
				text-align: left;
			}

		/* Image */

			.image {
				display: block;
			}

				.image.full, .image.left {
					float: none;
					display: block;
					width: 100%;
					margin: 0 0 1.5em 0;
				}

			.image-centered {
				float: none;
				display: block;
				width: 100%;
				margin: 0 0 1.5em 0;
			}

		/* Actions */

			ul.actions li {
				display: block;
				margin: 1em 0 0 0;
			}

				ul.actions li:first-child {
					margin-top: 0;
				}

			ul.actions.major {
				text-align: left !important;
			}

		/* Form */

			form textarea {
				min-height: 10em;
			}

		/* Button */

			input[type="button"],
			input[type="submit"],
			input[type="reset"],
			button,
			.button {
				display: block;
				width: 100%;
				text-align: center;
			}

		/* Header */

			#logo {
				position: relative;
				left: 0;
				top: 0;
				margin: 0;
				width: 100%;
			}

		/* Hero */

			#hero {
				padding: 2.5em 0 0 0;
			}

		/* Promo */

			#promo {
				padding: 20px;
			}

		/* Content */

			#content {
				margin-bottom: 2em;
			}

		/* Sidebar */

			#sidebar {
				margin-bottom: 2em;
			}

		/* Footer */

			#footer header.major {
				margin-bottom: 1em;
			}

	}

	#bkgVid {
		position: absolute;
    	top: 0;
		width: 100vw;
	}

